--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,7 +5,7 @@ metadata:
 deploy:
   kubectl:
     manifests:
-    - k8s/qms-adapter
+    - k8s/qms-adapter.yml
 build:
   tagPolicy:
     gitCommit: {}
