--- a/k8s/qms-adapter.yml
+++ b/k8s/qms-adapter.yml
@@ -47,11 +47,11 @@ spec:
           requests:
             cpu: "1m"
             memory: "128Mi"
-            ephemeral-storage: "1Gi"
+            ephemeral-storage: "1Mi"
           limits:
             cpu: "100m"
             memory: "256Mi"
-            ephemeral-storage: "1Gi"
+            ephemeral-storage: "1Mi"
         env:
           - name: OTEL_TRACES_EXPORTER
             valueFrom:
