--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,14 +1,17 @@
-apiVersion: skaffold/v1
+apiVersion: skaffold/v3
 kind: Config
 metadata:
   name: qms-adapter
-deploy:
-  kubectl:
-    manifests:
-    - k8s/qms-adapter.yml
 build:
+  artifacts:
+    - image: harbor.cyverse.org/de/qms-adapter
+  platforms:
+    - "linux/amd64"
   tagPolicy:
     gitCommit: {}
-  artifacts:
-  - image: harbor.cyverse.org/de/qms-adapter
   local: {}
+manifests:
+  rawYaml:
+    - k8s/qms-adapter.yml
+deploy:
+  kubectl: {}
